[package]
name = "househeld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "audio"
]

[dev-dependencies]
iced = { version = "0.10.0", default-features = false }

[workspace.dependencies]
iced_core = "0.10.0"
iced_graphics = { version = "0.9.0", features = ["opengl"] }
iced_native = "0.10.3"